--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,6 +21,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: docker/setup-qemu-action@v1.2.0
       - uses: docker/setup-buildx-action@v1.6.0
+      - uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - uses: docker/build-push-action@v2
         with:
           context: .
